--- a/src/index.css
+++ b/src/index.css
@@ -117,8 +117,7 @@ footer div a {
   font-size: 1.2rem;
 }
 footer div a:hover {
-  background-color: #4caf50;
-  color: white;
+  border-bottom: 1px solid white;
 }
 .form {
   background-color: #181818;
@@ -501,8 +500,8 @@ h2 {
   gap: 1rem;
 }
 .sort-options button {
-  background-color: mediumseagreen;
-  color: #ffffff;
+  background-color: #bdbdbd;
+  color: black;
   padding: 0.5rem 1rem;
   border-radius: 5px;
   cursor: pointer;
@@ -839,6 +838,9 @@ h2 {
   .convo-box {
     max-height: 220px;
   }
+  .chat-cont {
+    min-width: 100%;
+  }
   .chat-window {
     min-height: 50vh;
   }
@@ -928,11 +930,38 @@ h2 {
     font-size: 0.95rem;
     padding: 1rem;
   }
+  .search {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-  .searchbar {
-    font-size: 1rem;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
   }
 
+  .search form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    width: 100%;
+  }
+
+  .searchbar {
+    outline: none;
+    border: none;
+    background: transparent;
+    border-bottom: 2px solid whitesmoke;
+    font-size: 0.9rem;
+    color: whitesmoke;
+    width: 80vw;
+    max-width: 400px;
+    text-align: center;
+  }
   .back-btn {
     font-size: 1.2rem;
     padding: 0.4rem;
@@ -955,16 +984,25 @@ h2 {
   .about-page ul li {
     font-size: 1rem;
   }
+  .back-btn-container {
+    position: relative;
+  }
   .back-btn-container > .sort-options {
     display: flex;
-    flex-direction: column;
     flex-wrap: nowrap;
     font-size: 0.6rem;
     gap: 0.5rem;
   }
-  .user-nav > div {
+  .user-nav {
     display: flex;
     flex-direction: column;
+  }
+  .user-nav > a {
+    border-bottom: 1px solid white;
+  }
+  .user-nav > div {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
   }
