--- a/src/index.css
+++ b/src/index.css
@@ -935,7 +935,6 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
@@ -989,7 +988,7 @@ h2 {
   }
   .back-btn-container > .sort-options {
     display: flex;
-    flex-wrap: nowrap;
+    flex-direction: column;
     font-size: 0.6rem;
     gap: 0.5rem;
   }
@@ -1022,6 +1021,11 @@ h2 {
     align-items: center;
   }
   .delete-cont div {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .mutuals-cont {
+    display: flex;
     flex-direction: column;
     gap: 1rem;
   }
