--- a/src/index.css
+++ b/src/index.css
@@ -1028,5 +1028,8 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    width: 100%;
+    padding: 1rem;
+    font-size: 1.3rem;
   }
 }
