--- a/src/index.css
+++ b/src/index.css
@@ -187,11 +187,14 @@ footer div a:hover {
   display: flex;
   flex-direction: column;
   color: white;
-  gap: 0.7rem;
+  gap: 0.5rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   align-items: center;
+  text-align: center;
+  padding: 1rem;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
+
 .skill-card button {
   margin-top: auto;
 }
